--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-localstorage-adapter": "1.0.0-rc.1",
     "ember-moment": "7.0.0-beta.3",
+    "ember-power-select": "1.0.0-alpha.12",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0",
     "loader.js": "^4.0.1"
