--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-pikaday": "2.0.0",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0",
+    "ember-validations": "DockYard/ember-validations#5502c4c",
     "loader.js": "^4.0.1"
   }
 }
