--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "ember-moment": "7.0.0-beta.3",
     "ember-pikaday": "2.0.0",
     "ember-resolver": "^2.0.3",
-    "ember-simple-auth": "1.1.0",
     "ember-validations": "DockYard/ember-validations#5502c4c",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "torii": "0.8.0"
   }
 }
