--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "0.7.1",
     "ember-bootstrap": "0.7.3",
+    "ember-bootstrap-datetimepicker": "1.0.4",
     "ember-cli": "2.5.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
@@ -43,9 +44,9 @@
     "ember-load-initializers": "^0.5.1",
     "ember-localstorage-adapter": "1.0.0-rc.1",
     "ember-moment": "7.0.0-beta.3",
-    "ember-pikaday": "2.0.0",
     "ember-resolver": "^2.0.3",
     "ember-validations": "DockYard/ember-validations#5502c4c",
+    "eonasdan-bootstrap-datetimepicker": "4.15.35",
     "loader.js": "^4.0.1",
     "torii": "0.8.0"
   }
