--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ember-ajax": "0.7.1",
     "ember-bootstrap": "0.7.3",
     "ember-bootstrap-datetimepicker": "1.0.4",
+    "ember-bootstrap-validations": "0.1.0",
     "ember-cli": "2.5.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
