--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,25 @@
----
 language: node_js
+
 node_js:
-  - "4"
+  - '4'
 
 sudo: false
 
 cache:
   directories:
     - node_modules
+
+env:
+  - EMBER_TRY_SCENARIO=default
+  - EMBER_TRY_SCENARIO=ember-release
+  - EMBER_TRY_SCENARIO=ember-beta
+  - EMBER_TRY_SCENARIO=ember-canary
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - env: EMBER_TRY_SCENARIO=ember-beta
+    - env: EMBER_TRY_SCENARIO=ember-canary
 
 before_install:
   - npm config set spin false
@@ -19,4 +31,4 @@ install:
   - bower install
 
 script:
-  - npm test
+  - ember try:one $EMBER_TRY_SCENARIO test
