--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-localstorage-adapter": "1.0.0-rc.1",
     "ember-moment": "7.0.0-beta.3",
     "ember-resolver": "^2.0.3",
+    "ember-try": "0.2.5",
     "ember-validations": "DockYard/ember-validations#5502c4c",
     "eonasdan-bootstrap-datetimepicker": "4.15.35",
     "loader.js": "^4.0.1",
